# AFC-Rb-Sr-isotope-model

./: README.md  afc_sr_model.py  example_data.csv  pyproject.toml  requirements.txt
borborema/: __init__.py  afc_model.py  data_cleaning.py  datasets.py  run_all_figures.py  sr_nd_models.py  upb_geochronology.py  wr_pca.py
examples/: Example_DRN.xlsx  afc_model_exemple.csv  upb_geochronology_example.csv  wr_pca_exemple.csv
sr_isotopes/: LICENSE  README.md  afc_sr_model.py
