[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "borborema-magmatism-toolkit"
version = "0.1.0"
description = "Python toolkit for geochemical, isotopic, and geochronological analysis of magmatic systems in the Borborema Province."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Caio Tavares" }
]
keywords = [
  "geochemistry",
  "isotope geochemistry",
  "U-Pb geochronology",
  "Rb-Sr",
  "Sm-Nd",
  "petrology",
  "Borborema Province"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Information Analysis"
]
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "matplotlib>=3.7",
  "scikit-learn>=1.3",
  "scipy>=1.10"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["borborema*"]